--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
       <section class="working" id="working">
         <h2>Fonctionnement</h2>
         <div class="working__container">
-          <div class="jumbotron jumbotron-working">
+          <div class="jumbotron-working">
             <div class="jumbotron-working__body">
               <div class="working__bullete">1</div>
               <i class="fa-solid fa-mobile-screen-button"></i>
               <strong>Choisissez un restaurant</strong>
             </div>
           </div>
-          <div class="jumbotron jumbotron-working">
+          <div class="jumbotron-working">
             <div class="jumbotron-working__body">
               <div class="working__bullete">2</div>
               <i class="fa-solid fa-list"></i>
               <strong>Composez votre menu</strong>
             </div>
           </div>
-          <div class="jumbotron jumbotron-working store">
+          <div class="jumbotron-working store">
             <div class="jumbotron-working__body">
               <div class="working__bullete">3</div>
               <i class="fa-solid fa-store store"></i>
