ajout de l'effet au chargement de page des restaurants

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -45,10 +45,13 @@
     <!-- MAIN-->
     <main class="main menu">
       <div class="menu__container">
-        <div class="menu__title"><h2>&Agrave; la fran&ccedil;aise</h2></div>
+        <div class="menu__title">
+          <h2>&Agrave; la fran&ccedil;aise</h2>
+          <div class="menu-like"><i class="fa-regular fa-heart"></i></div>
+        </div>
         <section class="dish dish__starter">
           <h3 class="dish__title">entrées</h3>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish1">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Tartare de poule acidulé
@@ -62,7 +65,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish2">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Velouté de légumes d'antan
@@ -76,7 +79,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish3">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">Soupe à l'oignon</div>
               <div class="jumbotron-menu__description ellipsis">Revisitée</div>
