--- a/index.html
+++ b/index.html
@@ -78,62 +78,90 @@
       <section class="restaurants" id="restaurants">
         <h2>Restaurants</h2>
         <div class="restaurants__container">
-          <a class="card" href="#">
-            <div class="card__image">
+          <div class="card">
+            <a class="card__link" href="#">
+              <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
+                class="card__image"
                 src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="Auberge La Cannebière"
+                alt="La palette du gôut"
               />
-            </div>
+              <div class="card__overlay--details">
+                <strong>Voir la carte</strong>
+              </div>
+            </a>
             <div class="card__body">
-              <strong>La palette du gôut</strong>
-              <br />Ménilmontant
-              <div class="heart"><i class="fa-regular fa-heart"></i></div>
+              <p>
+                <strong>La palette du gôut</strong>
+                <br />Ménilmontant
+              </p>
+              <div class="card-like"><i class="fa-regular fa-heart"></i></div>
             </div>
-          </a>
-          <a class="card" href="#">
-            <div class="card__image">
+          </div>
+          <div class="card">
+            <a class="card__link" href="#">
+              <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
+                class="card__image"
                 src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="Auberge La Cannebière"
+                alt="La note enchantée"
               />
-            </div>
+              <div class="card__overlay--details">
+                <strong>Voir la carte</strong>
+              </div>
+            </a>
             <div class="card__body">
-              <strong>La note enchantée</strong>
-              <br />Charonne
-              <div class="heart"><i class="fa-regular fa-heart"></i></div>
+              <p>
+                <strong>La note enchantée</strong>
+                <br />Charonne
+              </p>
+              <div class="card-like"><i class="fa-regular fa-heart"></i></div>
             </div>
-          </a>
-          <a class="card" href="pages/a-la-francaise.html">
-            <div class="card__image">
+          </div>
+          <div class="card">
+            <a class="card__link" href="./pages/a-la-francaise.html">
+              <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
+                class="card__image"
                 src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="Auberge La Cannebière"
+                alt="&Agrave; la fran&ccedil;aise"
               />
-            </div>
+              <div class="card__overlay--details">
+                <strong>Voir la carte</strong>
+              </div>
+            </a>
             <div class="card__body">
-              <strong>&Agrave; la fran&ccedil;aise</strong>
-              <br />cité Rouge
-              <div class="heart"><i class="fa-regular fa-heart"></i></div>
+              <p>
+                <strong>&Agrave; la fran&ccedil;aise</strong>
+                <br />Cité Rouge
+              </p>
+              <div class="card-like"><i class="fa-regular fa-heart"></i></div>
             </div>
-          </a>
-          <a class="card" href="#">
-            <div class="card__image">
+          </div>
+          <div class="card">
+            <a class="card__link" href="#">
+              <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
+                class="card__image"
                 src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="Auberge La Cannebière"
+                alt="Le délice des sens"
               />
-            </div>
+              <div class="card__overlay--details">
+                <strong>Voir la carte</strong>
+              </div>
+            </a>
             <div class="card__body">
-              <strong>le délice des sens</strong>
-              <br />Folie-Méricourt
-              <div class="heart"><i class="fa-regular fa-heart"></i></div>
+              <p>
+                <strong>Le délice des sens</strong>
+                <br />Folie-Méricourt
+              </p>
+              <div class="card-like"><i class="fa-regular fa-heart"></i></div>
             </div>
-          </a>
+          </div>
         </div>
       </section>
     </main>
