--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -92,7 +92,7 @@
         </section>
         <section class="dish dish__main-course">
           <h3 class="dish__title">Plats</h3>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish1">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Coquilles Saint-Jacques
@@ -106,7 +106,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish2">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">Magret de canard</div>
               <div class="jumbotron-menu__description ellipsis">
@@ -118,7 +118,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish3">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Pigeonneau d’Ille-et-Vilaine
@@ -135,7 +135,7 @@
         </section>
         <section class="dish dish__dessert">
           <h3 class="dish__title">Desserts</h3>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish1">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Pétales de violettes glacés
@@ -149,7 +149,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish2">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Fondant au chocolat
@@ -161,7 +161,7 @@
               <i class="fa-solid fa-circle-check"></i>
             </div>
           </div>
-          <div class="jumbotron-menu">
+          <div class="jumbotron-menu jumbotron-menu--dish3">
             <div class="jumbotron-menu__body">
               <div class="jumbotron-menu__title ellipsis">
                 Millefeuille croustillant
