--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
     <title>Ohmyfood</title>
   </head>
   <body>
+    <div class="spinner-cook">
+      <div class="cook-content">
+        <div class="cook-scene">
+          <div class="cook-gaz">
+            <div class="cook-flame"></div>
+            <div class="cook-pan">
+              <div class="cook-pan__pancake">
+                <div class="cook-pan__pastry"></div>
+              </div>
+            </div>
+            <div class="cook-gaz__title">Ohmyfood</div>
+            <div class="cook-progress"></div>
+            <div class="cook-back"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- HEADER-->
     <header class="header">
       <div class="header__logo">
@@ -54,21 +71,21 @@
         <div class="working__container">
           <div class="jumbotron-working">
             <div class="jumbotron-working__body">
-              <div class="working__bullete">1</div>
+              <div class="jumbotron-working__bullete">1</div>
               <i class="fa-solid fa-mobile-screen-button"></i>
               <strong>Choisissez un restaurant</strong>
             </div>
           </div>
           <div class="jumbotron-working">
             <div class="jumbotron-working__body">
-              <div class="working__bullete">2</div>
+              <div class="jumbotron-working__bullete">2</div>
               <i class="fa-solid fa-list"></i>
               <strong>Composez votre menu</strong>
             </div>
           </div>
           <div class="jumbotron-working store">
             <div class="jumbotron-working__body">
-              <div class="working__bullete">3</div>
+              <div class="jumbotron-working__bullete">3</div>
               <i class="fa-solid fa-store store"></i>
               <strong>Dégustez au restaurant</strong>
             </div>
