add responsive design home page

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <title>Ohmyfood</title>
   </head>
   <body>
-    <div class="spinner-cook">
+    <!--<div class="spinner-cook">
       <div class="cook-content">
+        <div class="cook-title">Ohmyfood</div>
+        <div class="cook-progress"></div>
         <div class="cook-scene">
           <div class="cook-gaz">
             <div class="cook-flame"></div>
@@ -30,13 +32,12 @@
                 <div class="cook-pan__pastry"></div>
               </div>
             </div>
-            <div class="cook-gaz__title">Ohmyfood</div>
-            <div class="cook-progress"></div>
-            <div class="cook-back"></div>
+
+            <div class="cook-window"></div>
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <!-- HEADER-->
     <header class="header">
       <div class="header__logo">
@@ -186,7 +187,7 @@
     <!-- END MAIN-->
     <!-- FOOTER-->
     <footer class="footer">
-      <h3>Ohmyfood</h3>
+      <a href="../index.html"><h3>Ohmyfood</h3></a>
       <ul>
         <li>
           <a href="#footer"
