--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -176,13 +176,14 @@
             </div>
           </div>
         </section>
+        <a class="btn btn__menu" href="#">Commander</a>
       </div>
     </main>
 
     <!-- END MAIN-->
     <!-- FOOTER-->
     <footer class="footer">
-      <h3>Ohmyfood</h3>
+      <a href="../index.html"><h3>Ohmyfood</h3></a>
       <ul>
         <li>
           <a href="#footer"
