--- a/pages/loader.html
+++ b/pages/loader.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <div class="cook-content">
+      <div class="cook-title">Ohmyfood</div>
+      <div class="cook-progress"></div>
       <div class="cook-scene">
         <div class="cook-gaz">
           <div class="cook-flame"></div>
@@ -21,9 +23,8 @@
               <div class="cook-pan__pastry"></div>
             </div>
           </div>
-          <div class="cook-gaz__title">Ohmyfood</div>
-          <div class="cook-progress"></div>
-          <div class="cook-back"></div>
+
+          <div class="cook-window"></div>
         </div>
       </div>
     </div>
