end responsive disgn + css build

--- a/pages/le-delice-des-sens.html
+++ b/pages/le-delice-des-sens.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>&Agrave; la fran&ccedil;aise</title>
+    <title>Le délice des sens</title>
   </head>
   <body>
     <!-- HEADER-->
@@ -38,7 +38,7 @@
       </nav>
       <img
         class="header__image"
-        src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
       />
     </header>
     <!-- END HEADER-->
@@ -46,7 +46,7 @@
     <main class="main menu">
       <div class="menu__container">
         <div class="menu__title">
-          <h2>&Agrave; la fran&ccedil;aise</h2>
+          <h2>Le délice des sens</h2>
           <div class="menu-like"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="menu__wraper">
@@ -57,10 +57,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Tartare de poule acidulé
+                      Tartare de thon
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Aux zests d'orange
+                      Assaisonné au yuzu
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">25€</div>
@@ -73,10 +73,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Velouté de légumes d'antan
+                      Bouchée de homard croustillant
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Carotte, panais, topinambour
+                      Et sa farandole de petits légumes
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -89,10 +89,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Soupe à l'oignon
+                      Velouté de cèpes
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Revisitée
+                      Aux truffes
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">20€</div>
@@ -110,10 +110,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Coquilles Saint-Jacques
+                      Poulet rôti aux herbes de Provence
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Accompagnées d'une purée de panais
+                      Et sa crème de truffe
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">40€</div>
@@ -126,10 +126,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Magret de canard
+                      Langouste rôtie
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et parmentier de pommes de terre
+                      Et ses légumes de saison
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -142,10 +142,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pigeonneau d’Ille-et-Vilaine
+                      Côte de boeuf Angus
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Sur son lit de gnocchis aux légumes
+                      Et sa purée de panais
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">44€</div>
@@ -163,10 +163,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pétales de violettes glacés
+                      Farandole de desserts
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et purée de noisettes
+                      Du chef
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">18€</div>
@@ -179,7 +179,7 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Fondant au chocolat
+                      Crème brulée
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
                       Revisité
@@ -194,11 +194,9 @@
               <div class="jumbotron-menu jumbotron-menu--dish3">
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
-                    <div class="jumbotron-menu__title ellipsis">
-                      Millefeuille croustillant
-                    </div>
+                    <div class="jumbotron-menu__title ellipsis">Tiramisu</div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Myrtilles et pâte d’amande
+                      À la noisette
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">23€</div>
