--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Ohmyfood</title>
+    <title>Ohmyfood - Explorer nos restaurants</title>
+    <meta name="description" content="Homyfood, Réservez le menu qui vous
+    convient. Découvrez des restaurants d'exception, séléctonnés par nos soins.
+    Paris, Belleville"
   </head>
   <body>
     <!--<div class="spinner-cook">
@@ -44,7 +47,7 @@
         <h1>
           <img
             src="./images/logo/ohmyfood.png"
-            alt="logo Ohmyfood"
+            alt="Ohmyfood réservez le menu qui vous convient"
             class="header__logo--brand"
           />
         </h1>
@@ -97,12 +100,12 @@
         <h2>Restaurants</h2>
         <div class="restaurants__container">
           <div class="card">
-            <a class="card__link" href="#">
+            <a class="card__link" href="pages/la-palette-du-gout.html">
               <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
                 class="card__image"
-                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="La palette du gôut"
               />
               <div class="card__overlay--details">
@@ -118,12 +121,12 @@
             </div>
           </div>
           <div class="card">
-            <a class="card__link" href="#">
+            <a class="card__link" href="pages/la-note-enchantee.html">
               <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
                 class="card__image"
-                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="La note enchantée"
               />
               <div class="card__overlay--details">
@@ -144,7 +147,7 @@
               <div class="card__badge">Nouveau</div>
               <img
                 class="card__image"
-                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="&Agrave; la fran&ccedil;aise"
               />
               <div class="card__overlay--details">
@@ -160,12 +163,12 @@
             </div>
           </div>
           <div class="card">
-            <a class="card__link" href="#">
+            <a class="card__link" href="pages/le-delice-des-sens.html">
               <div class="card__overlay"></div>
               <div class="card__badge">Nouveau</div>
               <img
                 class="card__image"
-                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Le délice des sens"
               />
               <div class="card__overlay--details">
