--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>&Agrave; la fran&ccedil;aise</title>
+    <title>La note enchantée</title>
   </head>
   <body>
     <!-- HEADER-->
@@ -38,7 +38,7 @@
       </nav>
       <img
         class="header__image"
-        src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
       />
     </header>
     <!-- END HEADER-->
@@ -46,7 +46,7 @@
     <main class="main menu">
       <div class="menu__container">
         <div class="menu__title">
-          <h2>&Agrave; la fran&ccedil;aise</h2>
+          <h2>La note enchantée</h2>
           <div class="menu-like"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="menu__wraper">
@@ -57,10 +57,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Tartare de poule acidulé
+                      Ravioles de foie gras
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Aux zests d'orange
+                      Accompagnés de leur crème à la truffe
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">25€</div>
@@ -73,10 +73,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Velouté de légumes d'antan
+                      Caviar osciètre
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Carotte, panais, topinambour
+                      Sur blini à la farine de blé noir
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -89,13 +89,29 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Soupe à l'oignon
+                      Homard et espuma de potiron
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Revisitée
+                      Mariné aux zestes d'orange
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">20€</div>
+                </div>
+                <div class="jumbotron-menu__selected">
+                  <i class="fa-solid fa-circle-check"></i>
+                </div>
+              </div>
+              <div class="jumbotron-menu jumbotron-menu--dish4">
+                <div class="jumbotron-menu__body">
+                  <div class="jumbotron-menu__text">
+                    <div class="jumbotron-menu__title ellipsis">
+                      Foie gras de canard cuit entier
+                    </div>
+                    <div class="jumbotron-menu__description ellipsis">
+                      Confiture de figue et pain toasté
+                    </div>
+                  </div>
+                  <div class="jumbotron-menu__price">35€</div>
                 </div>
                 <div class="jumbotron-menu__selected">
                   <i class="fa-solid fa-circle-check"></i>
@@ -110,10 +126,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Coquilles Saint-Jacques
+                      Noix de coquilles Saint-Jacques
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Accompagnées d'une purée de panais
+                      Sur lit de purée de céleri-rave
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">40€</div>
@@ -126,10 +142,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Magret de canard
+                      Langoustine poêlée
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et parmentier de pommes de terre
+                      Purée de patate douce
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -142,10 +158,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pigeonneau d’Ille-et-Vilaine
+                      Mijoté de queue de boeuf
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Sur son lit de gnocchis aux légumes
+                      Et riz sauvage aux zestes de citron
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">44€</div>
@@ -163,10 +179,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pétales de violettes glacés
+                      Macaron noisette et chocolat
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et purée de noisettes
+                      Glace au caramel brun et sel de Guérande
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">18€</div>
@@ -179,10 +195,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Fondant au chocolat
+                      Baba au rhum revisité
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Revisité
+                      Avec son coulis de citron
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">22€</div>
@@ -195,10 +211,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Millefeuille croustillant
+                      Tarte au citron meringuée
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Myrtilles et pâte d’amande
+                      Déstructurée
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">23€</div>
