--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>&Agrave; la fran&ccedil;aise</title>
+    <title>La palette du goût</title>
   </head>
   <body>
     <!-- HEADER-->
@@ -38,7 +38,7 @@
       </nav>
       <img
         class="header__image"
-        src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
       />
     </header>
     <!-- END HEADER-->
@@ -46,7 +46,7 @@
     <main class="main menu">
       <div class="menu__container">
         <div class="menu__title">
-          <h2>&Agrave; la fran&ccedil;aise</h2>
+          <h2>La palette du goût</h2>
           <div class="menu-like"><i class="fa-regular fa-heart"></i></div>
         </div>
         <div class="menu__wraper">
@@ -57,10 +57,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Tartare de poule acidulé
+                      Fricassée d'escargot
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Aux zests d'orange
+                      Au piment d'Espelette
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">25€</div>
@@ -73,10 +73,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Velouté de légumes d'antan
+                      Foie gras de canard mi-cuit
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Carotte, panais, topinambour
+                      Et ses copeaux de truffe noire
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -89,10 +89,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Soupe à l'oignon
+                      Oeuf au plat
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Revisitée
+                      Assaisonné à la truffe sur lit de caviar
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">20€</div>
@@ -110,10 +110,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Coquilles Saint-Jacques
+                      Filet de boeuf aux herbes
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Accompagnées d'une purée de panais
+                      Accompagné de sa ribambelle de légumes
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">40€</div>
@@ -126,10 +126,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Magret de canard
+                      Parmentier de queue de boeuf
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et parmentier de pommes de terre
+                      À la truffe noire sur sa purée de panais
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">35€</div>
@@ -142,10 +142,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pigeonneau d’Ille-et-Vilaine
+                      Filet de turbot
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Sur son lit de gnocchis aux légumes
+                      Aux agrumes
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">44€</div>
@@ -163,10 +163,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Pétales de violettes glacés
+                      Paris-Brest
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Et purée de noisettes
+                      Revisité
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">18€</div>
@@ -179,10 +179,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Fondant au chocolat
+                      Macaron au chocolat d'exception
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Revisité
+                      Et glace à la vanille de Madagascar
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">22€</div>
@@ -195,10 +195,10 @@
                 <div class="jumbotron-menu__body">
                   <div class="jumbotron-menu__text">
                     <div class="jumbotron-menu__title ellipsis">
-                      Millefeuille croustillant
+                      Mousse au chocolat
                     </div>
                     <div class="jumbotron-menu__description ellipsis">
-                      Myrtilles et pâte d’amande
+                      Au piment d'Espelette et à la truffe noire
                     </div>
                   </div>
                   <div class="jumbotron-menu__price">23€</div>
