--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     Paris, Belleville"
   </head>
   <body>
-    <!--<div class="spinner-cook">
+    <div class="spinner-cook">
       <div class="cook-content">
         <div class="cook-title">Ohmyfood</div>
         <div class="cook-progress"></div>
@@ -40,7 +40,7 @@
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
     <!-- HEADER-->
     <header class="header">
       <div class="header__logo">
