fixed hover effects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Ohmyfood - Explorer nos restaurants</title>
     <meta name="description" content="Homyfood, Réservez le menu qui vous
     convient. Découvrez des restaurants d'exception, séléctonnés par nos soins.
-    Paris, Belleville"
+    Paris, Belleville">
   </head>
   <body>
     <div class="spinner-cook">
@@ -87,10 +87,10 @@
               <strong>Composez votre menu</strong>
             </div>
           </div>
-          <div class="jumbotron-working store">
+          <div class="jumbotron-working">
             <div class="jumbotron-working__body">
               <div class="jumbotron-working__bullete">3</div>
-              <i class="fa-solid fa-store store"></i>
+              <i class="fa-solid fa-store"></i>
               <strong>Dégustez au restaurant</strong>
             </div>
           </div>
