add alt to restaurant images

--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -39,6 +39,7 @@
       <img
         class="header__image"
         src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="&Agrave; la fran&ccedil;aise"
       />
     </header>
     <!-- END HEADER-->
