--- a/pages/le-delice-des-sens.html
+++ b/pages/le-delice-des-sens.html
@@ -39,6 +39,7 @@
       <img
         class="header__image"
         src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+        alt="Le délice des sens"
       />
     </header>
     <!-- END HEADER-->
