--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -39,6 +39,7 @@
       <img
         class="header__image"
         src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+        alt="La note enchantée"
       />
     </header>
     <!-- END HEADER-->
