--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -39,6 +39,7 @@
       <img
         class="header__image"
         src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="La palette du goût"
       />
     </header>
     <!-- END HEADER-->
